# ChangeLog for dev-perl/File-BaseDir
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-BaseDir/ChangeLog,v 1.6 2004/12/13 05:39:20 weeve Exp $

  12 Dec 2004; Jason Wever <weeve@gentoo.org> File-BaseDir-0.02.ebuild:
  Stable on sparc.

  02 Sep 2004; David Holm <dholm@gentoo.org> File-BaseDir-0.02.ebuild:
  Added to ~ppc.

  10 Aug 2004; Ferris McCormick <fmccor@gentoo.org> File-BaseDir-0.02.ebuild:
  Add ~sparc keyword (Bug 59940).  Passes internal tests & filer seems to work.

  31 Mar 2004; Michael Cummings <mcummings@gentoo.org>
  File-BaseDir-0.02.ebuild:
  Marking stable

*File-BaseDir-0.02 (14 Feb 2004)

  14 Feb 2004; Eric Sammer <esammer@gentoo.org> File-BaseDir-0.02.ebuild:
  Initial import of File-BaseDir submitted by Sven Wegener
  <sven.wegener@stealer.net> as a dependency for the yet to be added
  app-misc/filer. Thanks to Sven Wegener. Part of bug #41605.
