@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/File-Spec
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Spec/Attic/ChangeLog,v 1.16 2004/06/25 00:30:03 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Spec/Attic/ChangeLog,v 1.17 2004/12/22 11:36:21 nigoro Exp $
+
+  22 Dec 2004; Yuta SATOH <nigoro@gentoo.org> File-Spec-0.87.ebuild:
+  added ~ppc64
 
 *File-Spec-0.87 (05 Jun 2004)
 
